--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,51 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container{ 
+  background-color: #fafafa;
+  /* padding: 10px; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/* #calculator-container {
+  max-width: 70%;
+} */
+
+.curreCheckbox {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 0;
+}
+
+.row {
+  /* margin-right: 4px; */
+}
+
+.dropdown-toggle {
+  background-color: #fafafa;
+  color: rebeccapurple;
+  border-color: transparent;
+}
+
+.dropdown-toggle:hover {
+  background-color: gray;
+
+}
+
+.input-group {
+  padding: 0 0 0 0;
+}
+
+.gj-datepicker {
+  width: 75%;
+}
+
+.curreCheckbox >button::first-letter, .dropdown-menu > button::first-letter {
+  color: green;
+}
+
+.picker-input__text{
+   width:175px;
+   margin-bottom: 1%;
+   border: 1px solid #ced4da;
+   border-radius: 0.25rem;
+}
+.col {
+  text-align: left;
 }
